[package]
name = "server-coin"
version = "0.1.0"
edition = "2021"

[dependencies]
chia-bls = "0.5.1"
chia-client = "0.5.1"
chia-protocol = "0.5.1"
chia-wallet = "0.5.1"
chia-wallet-sdk = "0.4.0"
clvm-traits = { version = "0.5.1", features = ["derive"] }
clvm-utils = "0.5.1"
clvmr = "0.5.0"
hex = "0.4.3"
hex-literal = "0.4.1"
num-bigint = "0.4.4"
rand = "0.8.5"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[patch.crates-io]
chia-wallet-sdk = { path = "../wallet-sdk" }
