[package]
name = "server-coin"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"

chia-bls = "0.5.1"
chia-client = "0.5.1"
chia-protocol = "0.5.1"
chia-wallet = "0.5.1"
chia-wallet-sdk = "0.5.0"
clvm-traits = { version = "0.5.1", features = ["derive"] }
clvm-utils = "0.5.1"
clvmr = "0.5.0"
hex = "0.4.3"
hex-literal = "0.4.1"
num-bigint = "0.4.4"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
native-tls = "0.2.11"
bip39 = "2.0.0"

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
openssl-sys = { version = "0.9.99", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
openssl-sys = { version = "0.9.99", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
