[package]
name = "chia-server-coin"
version = "0.0.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.8", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.16.10"

chia-bls = "0.9.0"
chia-client = "0.9.0"
chia-protocol = "0.9.0"
chia-puzzles = "0.9.0"
chia-wallet-sdk = "0.11.0"
clvm-traits = { version = "0.9.0", features = ["derive"] }
clvm-utils = "0.9.0"
clvmr = "0.7.0"
hex = "0.4.3"
hex-literal = "0.4.1"
num-bigint = "0.4.6"
anyhow = "1.0.86"
tokio = { version = "1.39.1", features = ["full"] }
native-tls = "0.2.12"
bip39 = "2.0.0"
indexmap = "2.2.6"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
